--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/LaurenCummings/mern-store-project#readme",
   "dependencies": {
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "mongoose": "^8.17.2"
   }
